[tool.poetry]
name = "pssg"
version = "0.1.0"
description = "A tool for generating static sites from markdown files and templates."
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mistune = "^3.0.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
unsafe-fixes = true
preview = true
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    "CPY001",
    "ERA001",
    "TD002",
    "TD003",
    "FIX002",
    "COM812",
    "ISC001",
    "DJ001",
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
